[package]
name = "remrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full", "signal"] }
